Fixed spacing

--- a/WeddingWebsite/wedStyle.css
+++ b/WeddingWebsite/wedStyle.css
@@ -61,6 +61,15 @@ a {
     font-size: 1.25rem;
 }
 
+#about, #story, #gallery, #reminders, #event, #Navigation, #rsvp {
+    margin: 30px 0;
+}
+
+#gallery {
+    background-color:#00141F;
+    color: #f6f6f6 !important;
+}
+
 h2.header-text {
     font-family: 'Great Vibes';
     font-size: 2.5rem;
@@ -937,12 +946,6 @@ h3 {
 
 h3 ~ p {
     padding-bottom: 30px;
-}
-
-#gallery {
-    background-color:#00141F;
-    margin: 30px 0;
-    color: #f6f6f6 !important;
 }
 
 .hr-text {
